# moducore

./: pyproject.toml
alembic/: env.py
alembic/versions/: 07b6bcd62ee3_fix_fk_schema_qualification_and_add_.py  4ec451364d80_add_hospital_schema_categories_.py  d767e4f241bf_add_hospital_stocks_table.py
backend/src/modules/attendance/: attendance.model.js
backend/src/modules/notifications/: notification.model.js
backend/src/modules/subscriptions/: subscription.model.js
backend/src/modules/users/: user.model.js
backend/src/modules/workouts/: workoutLog.model.js  workoutPlan.model.js
docs/: commands.md  feat-hospital-mvp.md  feat-jwt.md  feat-rbac-role-permission.md  feat_dashboard.md  future.md  tests.md  where-i-am.md
frontend/web/: middleware.ts.off  package-lock.json  package.json
frontend/web/app/: layout.tsx  page.tsx
frontend/web/app/dashboard/: page.tsx
frontend/web/context/: AuthContext.tsx
frontend/web/lib/: auth.ts
scripts/: seed_rbac.py
src/apps/hospital/dashboard/: dashboard_controller.py  dashboard_dependencies.py  dashboard_repository.py  dashboard_schemas.py  dashboard_service.py
src/apps/hospital/medicine/: category_controller.py  category_dependencies.py  category_model.py  stock_model.py  (+14 more)
src/core/: app.py
src/core/config/: settings.py
src/core/database/: base.py  model_registry.py
src/modules/permission/: model.py
src/modules/role/: model.py
src/modules/user/: controller.py  dependencies.py  model.py  repository.py
tests/: conftest.py  test_category.py  test_login.py  test_medicine.py  test_medicine_permission.py
(+8 files in other folders)
